# poco-cpp-booster

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/PocoCppBooster/: IterableDynamicStruct.hpp
test/src/: test_main.cpp
